--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,7 +4,7 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
-      <%= link_to "by #{@prototype.user.name}", user_path, class: :prototype__user %>
+      <%= link_to "by #{@prototype.user.name}", user_path(@prototype.user_id), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <div class="prototype__manage">
           <% if user_signed_in? && current_user.id == @prototype.user_id %>
@@ -45,9 +45,9 @@
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
           <% @comments.each do |comment| %>
-            <li class="comment_list">
+            <li class="comments_list">
               <%= comment.content %>
-              <%= link_to "(#{comment.user.name})" ,root_path, class: :comment_user %>
+              <%= link_to "(#{comment.user.name})" ,user_path(comment.user.id), class: :comment_user %>
             </li>
           <%end%>  
         </ul>
